...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllTask">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="161dp"
        android:layout_height="47dp"
        android:text="@string/all_tasks1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
